Improve capture workflow and packet table UX