@@ -175,6 +175,9 @@ public class TableSorter extends TableMap {
     public void tableChanged(TableModelEvent e) {
         //System.out.println("Sorter: tableChanged"); 
         reallocateIndexes();
+        if (!sortingColumns.isEmpty()) {
+            sort(this);
+        }
 
         super.tableChanged(e);
     }
@@ -287,7 +290,7 @@ public class TableSorter extends TableMap {
     public void sortByColumn(int column, boolean ascending) {
         this.ascending = ascending;
         sortingColumns.removeAllElements();
-        sortingColumns.addElement(new Integer(column));
+        sortingColumns.addElement(Integer.valueOf(column));
         sort(this);
         super.tableChanged(new TableModelEvent(this));
     }
